# multi-radar-inertial-odometry

./: LICENSE  README.md
motion_segment_4d/: CMakeLists.txt  package.xml
motion_segment_4d/include/motion_segment_4d/: motion_segment_4d.h
motion_segment_4d/launch/: motion_segment.launch
motion_segment_4d/src/: conti_callback.cpp  motion_segment_4d.cpp  motion_segment_4d_node.cpp
radar_odometry/: CMakeLists.txt  package.xml
radar_odometry/config/: params.yaml
radar_odometry/include/radar_odometry/: radar_odometry.h  utility.h
radar_odometry/launch/: radar_odometry.launch  radar_odometry_offline_test.launch
radar_odometry/src/radar_odometry/: radar_imu_fusion.cpp  radar_imu_fusion_node.cpp  transform_fusion.cpp
