<?xml version="1.0"?>
<package format="2">
  <name>motion_segment_4d</name>
  <version>0.0.0</version>
  <description>The motion segmentation package for 4d radars</description>

  <maintainer email="jerry8137@gmail.com">Chun-Yu Hou</maintainer>

  <license>BSD</license>

  <depend>catkin</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
</package>
