<?xml version="1.0"?>
<package format="2">
  <name>radar_odometry</name>
  <version>0.0.0</version>
  <description>4d radar inertial odometry</description>

  <maintainer email="jerry8137@gmail.com">Chun-Yu Hou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>pcl_conversions</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_runtime</depend>
  <depend>tf_conversions</depend>
  <depend>GTSAM</depend>
</package>
